# qr-codes

./: .flake8  .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: test.yml
qr_codes/: __init__.py  cli.py
tests/: .gitignore  test_cli.py
